quesosCastro.github.io

--- a/iniciar.html
+++ b/iniciar.html
@@ -35,18 +35,18 @@
             <fieldset>
               <h2 class="fs-title">Crear Cuenta</h2>
               <h3 class="fs-subtitle">Paso 1</h3>
-              <input type="text" name="email" id="mail" placeholder="Email" />
-              <input type="password" name="pass" id="cont" placeholder="Password" />
-              <input type="password" name="cpass" id="cCont" placeholder="Confirm Password" />
+              <input type="text" name="email" id="mail" placeholder="Email" required />
+              <input type="password" name="pass" id="cont" placeholder="Password" required />
+              <input type="password" name="cpass" id="cCont" placeholder="Confirm Password" required />
               <input type="button" name="next" id="sig" class="next action-button" value="Siguiente" />
             </fieldset>
             <fieldset>
               <h2 class="fs-title">Crear Cuenta</h2>
               <h3 class="fs-subtitle">Paso 2</h3>
-              <input type="text" name="fname" id="nomb" placeholder="First Name" />
-              <input type="text" name="lname" id="ape" placeholder="Last Name" />
-              <input type="number" name="phone" id="tel" placeholder="Phone" />
-              <textarea name="address" id="address" placeholder="Address"></textarea>
+              <input type="text" name="fname" id="nomb" placeholder="First Name" required />
+              <input type="text" name="lname" id="ape" placeholder="Last Name" required />
+              <input type="number" name="phone" id="tel" placeholder="Phone" required />
+              <textarea name="address" id="address" placeholder="Address" ></textarea>
               <input type="button" name="previous" id="volv" class="previous action-button" value="Volver" />
               <input type="button" name="submit" id="env" class="submit action-button" value="Enviar" />
             </fieldset>
